# admin_serv

./: Cargo.toml  setting.dev.toml
src/: main.rs
src/caches/: admin_roles.rs  ads.rs  menus.rs  mod.rs  video_authors.rs  video_categories.rs  video_tags.rs
src/common/: acl.rs  mod.rs
src/config/: mod.rs
src/controllers/: admin_roles.rs  admins.rs  index.rs  mod.rs  navs.rs  user_levels.rs  videos.rs  watch_records.rs
src/data/: cond_builder.rs  data_set.rs  db.rs  mod.rs  model.rs  query_builder.rs
src/filters/: admin_roles.rs  menus.rs  mod.rs  video_authors.rs
src/models/: admin_roles.rs  admins.rs  ads.rs  configs.rs  menus.rs  mod.rs  navs.rs  user_levels.rs  users.rs  video_authors.rs  video_categories.rs  video_replies.rs  video_tags.rs  videos.rs  watch_records.rs
src/modles/: admin_roles.rs  ads.rs  index.rs  menus.rs  mod.rs
src/utils/: com_fun.rs  datetime.rs  mod.rs  random.rs  request.rs  response.rs  routers.rs
src/validations/: mod.rs
src/websocket/: mod.rs  server.rs
