[package]
name = "admin_serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-rt = "1.1.1"
actix-codec = "0.4.1"
actix-web-actors = "3.0.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
lazy_static = "1.4"
rand = "0.8.4"
mysql = "21.0.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.70"
actix-session = "0.4.1"
toml = "0.5.8" 
oss =  "0.3.0"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
futures = "0.3.17"
regex = "1.3"

[dependencies.fluffy]
git = "https://gitee.com/houhanting/fluffy.git"
branch = "master"
#release模式请去掉以下debug
features = ["debug"]
